fix: fix hover effects on mobile devices (11.03.23 22:13)

--- a/cssBayan/styles/components/meme/animation.css
+++ b/cssBayan/styles/components/meme/animation.css
@@ -14,15 +14,17 @@
   transform: rotate(0deg);
 }
 
-.meme:hover .meme__image {
-  width: 600px;
-}
-.meme:hover .meme__wrapImg {
-  transform: rotate(0deg);
-  filter: invert(100%) sepia(34%) saturate(2430%) hue-rotate(174deg)
-    brightness(104%) contrast(107%);
-}
+@media (hover:hover) {
+  .meme:hover .meme__image {
+    width: 600px;
+  }
+  .meme:hover .meme__wrapImg {
+    transform: rotate(0deg);
+    filter: invert(100%) sepia(34%) saturate(2430%) hue-rotate(174deg)
+      brightness(104%) contrast(107%);
+  }
 
-.meme:hover .meme__title {
-  color: azure;
+  .meme:hover .meme__title {
+    color: azure;
+  }
 }
